--- a/src/index.css
+++ b/src/index.css
@@ -34,10 +34,12 @@ body {
   background: #abbaab;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #ffffff, #abbaab);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #ffffff, #abbaab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  
   background-repeat: no-repeat;
-
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+  ::-webkit-scrollbar{
+    display: none;
+  }
 }
 
 #root {
